[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/resources/cop.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Roboto-BlackItalic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Styles/Labels/whatevertheseneedseveremanagement.tres" type="DynamicFont" id=3]
[ext_resource path="res://Prefabs/checkbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/tooltip/autobuyer_tooltip.gd" type="Script" id=5]
[ext_resource path="res://Styles/Labels/Big.tres" type="DynamicFont" id=6]
[ext_resource path="res://Styles/Labels/Desc.tres" type="DynamicFont" id=7]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
draw_center = false

[node name="MarginContainer" type="MarginContainer"]
margin_right = 217.0
margin_bottom = 155.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 207.0
margin_bottom = 155.0

[node name="Panel2" type="Panel" parent="VBoxContainer"]
margin_right = 197.0
margin_bottom = 1.0
rect_min_size = Vector2( 0, 1 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="going_to_buy" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 5.0
margin_right = 197.0
margin_bottom = 29.0
alignment = 1

[node name="check" parent="VBoxContainer/going_to_buy" instance=ExtResource( 4 )]
margin_left = 46.0
margin_top = 0.0
margin_right = 70.0
margin_bottom = 24.0
text = ""

[node name="flair" type="Label" parent="VBoxContainer/going_to_buy"]
margin_left = 74.0
margin_top = 7.0
margin_right = 151.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.764706, 0.733333, 0.603922, 1 )
text = "Will purchase"

[node name="low_fuel" type="VBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 28.0
margin_right = 207.0
margin_bottom = 82.0
alignment = 1

[node name="Panel" type="Panel" parent="VBoxContainer/low_fuel"]
margin_right = 207.0
margin_bottom = 2.0
rect_min_size = Vector2( 0, 2 )
custom_styles/panel = SubResource( 1 )

[node name="title" type="Label" parent="VBoxContainer/low_fuel"]
margin_top = 6.0
margin_right = 207.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
text = "Low Fuel"
align = 1

[node name="desc" type="Label" parent="VBoxContainer/low_fuel"]
margin_left = 5.0
margin_top = 27.0
margin_right = 202.0
margin_bottom = 54.0
rect_min_size = Vector2( 197, 0 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.764706, 0.733333, 0.603922, 1 )
text = "This LORED has less than 10% of its base fuel capacity, so it will not be purchased."
align = 1
autowrap = true

[node name="upgrade" type="VBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 28.0
margin_right = 207.0
margin_bottom = 127.0
alignment = 1

[node name="title" type="Label" parent="VBoxContainer/upgrade"]
margin_right = 207.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
text = "Upgrade Owned"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/upgrade"]
margin_top = 21.0
margin_right = 207.0
margin_bottom = 53.0
alignment = 1

[node name="type" type="Label" parent="VBoxContainer/upgrade/HBoxContainer"]
margin_right = 83.0
margin_bottom = 32.0
rect_min_size = Vector2( 55, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
text = "Extra-normal"
align = 2
valign = 1
autowrap = true

[node name="Panel" type="Panel" parent="VBoxContainer/upgrade/HBoxContainer"]
margin_left = 87.0
margin_right = 119.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 3 )

[node name="icon" type="Sprite" parent="VBoxContainer/upgrade/HBoxContainer/Panel"]
position = Vector2( 16, 16 )
texture = ExtResource( 1 )

[node name="upgrade_name" type="Label" parent="VBoxContainer/upgrade/HBoxContainer"]
margin_left = 123.0
margin_right = 207.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "pippenpaddle -oppsocopolis"
valign = 1
autowrap = true

[node name="desc" type="Label" parent="VBoxContainer/upgrade"]
margin_left = 20.0
margin_top = 57.0
margin_right = 185.0
margin_bottom = 99.0
rect_min_size = Vector2( 165, 0 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.764706, 0.733333, 0.603922, 1 )
text = "This upgrade is owned and active, so this LORED will continuously be purchased."
align = 1
autowrap = true

[node name="ingredient_net" type="VBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 86.0
margin_right = 207.0
margin_bottom = 185.0
alignment = 1

[node name="Panel" type="Panel" parent="VBoxContainer/ingredient_net"]
margin_right = 207.0
margin_bottom = 2.0
rect_min_size = Vector2( 0, 2 )
custom_styles/panel = SubResource( 1 )

[node name="title" type="Label" parent="VBoxContainer/ingredient_net"]
margin_top = 6.0
margin_right = 207.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
text = "Ingredient Net Output"
align = 1

[node name="desc" type="Label" parent="VBoxContainer/ingredient_net"]
margin_left = 5.0
margin_top = 27.0
margin_right = 202.0
margin_bottom = 99.0
rect_min_size = Vector2( 197, 0 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.764706, 0.733333, 0.603922, 1 )
text = "This LORED will not be purchased if doing so would cause any ingredient LOREDs' net output (per second) to drop below 0, unless you can afford to purchase that LORED as well."
align = 1
autowrap = true

[node name="key_lored" type="VBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 28.0
margin_right = 207.0
margin_bottom = 76.0
alignment = 1

[node name="title" type="Label" parent="VBoxContainer/key_lored"]
margin_right = 207.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
text = "Key LORED"
align = 1

[node name="desc" type="Label" parent="VBoxContainer/key_lored"]
margin_left = 33.0
margin_top = 21.0
margin_right = 173.0
margin_bottom = 48.0
rect_min_size = Vector2( 140, 0 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.764706, 0.733333, 0.603922, 1 )
text = "Key LOREDs will continuously be purchased."
align = 1
autowrap = true

[node name="level" type="VBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 28.0
margin_right = 207.0
margin_bottom = 76.0
alignment = 1

[node name="title" type="Label" parent="VBoxContainer/level"]
margin_right = 207.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
text = "Low Level"
align = 1

[node name="desc" type="Label" parent="VBoxContainer/level"]
margin_left = 8.0
margin_top = 21.0
margin_right = 198.0
margin_bottom = 48.0
rect_min_size = Vector2( 190, 0 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.764706, 0.733333, 0.603922, 1 )
text = "This LORED is below level 6, so it will be purchased whenever possible."
align = 1
autowrap = true

[node name="inactive" type="VBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 80.0
margin_right = 207.0
margin_bottom = 128.0
alignment = 1

[node name="title" type="Label" parent="VBoxContainer/inactive"]
margin_right = 207.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
text = "Inactive"
align = 1

[node name="desc" type="Label" parent="VBoxContainer/inactive"]
margin_left = 33.0
margin_top = 21.0
margin_right = 173.0
margin_bottom = 48.0
rect_min_size = Vector2( 140, 0 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.764706, 0.733333, 0.603922, 1 )
text = "This LORED is not active, so it will be purchased."
align = 1
autowrap = true

[node name="net" type="VBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 28.0
margin_right = 207.0
margin_bottom = 76.0
alignment = 1

[node name="title" type="Label" parent="VBoxContainer/net"]
margin_right = 207.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
text = "Net Output"
align = 1

[node name="desc" type="Label" parent="VBoxContainer/net"]
margin_left = 4.0
margin_top = 21.0
margin_right = 201.0
margin_bottom = 48.0
rect_min_size = Vector2( 197, 0 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.764706, 0.733333, 0.603922, 1 )
text = "If this LORED's net output (per second) is less than 0, it will be purchased."
align = 1
autowrap = true

[node name="limitbreak" type="VBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 28.0
margin_right = 207.0
margin_bottom = 91.0
alignment = 1

[node name="title" type="Label" parent="VBoxContainer/limitbreak"]
margin_right = 207.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
text = "Limit Break"
align = 1

[node name="desc" type="Label" parent="VBoxContainer/limitbreak"]
margin_left = 5.0
margin_top = 21.0
margin_right = 202.0
margin_bottom = 63.0
rect_min_size = Vector2( 197, 0 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.764706, 0.733333, 0.603922, 1 )
text = "If this LORED *would* have negative net output without its Limit Break bonus, then it will be purchased."
align = 1
autowrap = true

[node name="Panel" type="Panel" parent="VBoxContainer"]
margin_top = 33.0
margin_right = 197.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 1 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="set_key" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 197.0
margin_bottom = 93.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/set_key"]
margin_right = 197.0
margin_bottom = 24.0
alignment = 1

[node name="check" parent="VBoxContainer/set_key/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 53.0
margin_top = 0.0
margin_right = 77.0
margin_bottom = 24.0
text = ""

[node name="flair" type="Label" parent="VBoxContainer/set_key/HBoxContainer"]
margin_left = 81.0
margin_top = 7.0
margin_right = 144.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.764706, 0.733333, 0.603922, 1 )
text = "Key LORED"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/set_key"]
margin_top = 28.0
margin_right = 197.0
margin_bottom = 55.0
rect_min_size = Vector2( 197, 0 )
size_flags_horizontal = 4
alignment = 1

[node name="desc" type="Label" parent="VBoxContainer/set_key/HBoxContainer2"]
margin_right = 143.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.764706, 0.733333, 0.603922, 1 )
text = "Press K to define this LORED as a Key LORED."
align = 1
autowrap = true

[node name="default" type="Label" parent="VBoxContainer/set_key/HBoxContainer2"]
margin_left = 147.0
margin_right = 197.0
margin_bottom = 27.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 8
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.764706, 0.733333, 0.603922, 1 )
text = "Default: false"
align = 1
autowrap = true
